# entropy-estimation

./: .gitignore  .gitmodules  README.md  pyproject.toml
collectors/: README.md
collectors/bus/: bus_collector.py
collectors/ethereum/: ethereum_collector.py
collectors/radio/: radio_collector.py
collectors/sismology/: sismology_collector.py
cpp_integration/: README.md  __init__.py  config.yaml  entropy_assessment.py
notebooks/: README.md  bus_data_exploration.ipynb
processed_data/bus/: 8bits
results/8bits/lz/: bus.txt  ethereum.txt  generated.txt  radio.txt
results/8bits/ml_lstm/: bus.txt  ethereum.txt  generated.txt  radio.txt  sismology.txt
results/8bits/ml_rnn/: bus.txt  ethereum.txt  generated.txt  radio.txt  sismology.txt
results/8bits/ml_transformer/: bus.txt  ethereum.txt  generated.txt  radio.txt  (+1 more)
results/lz/: sismology.txt
results/ml/: bus.txt  ethereum.txt  radio.txt
results/ml_lstm/: bus.txt  ethereum.txt  radio.txt
results/nist/: bus.txt
scripts/: __init__.py  bus_8bits.py  ethereum_8bits.py  lz_estimate.py  ml_lstm_entropy.py  nist_estimate.py  radio_8bits.py  sismology_8bits.py
scripts/estimate_8bits/: lz.py  ml_lstm.py  ml_rnn.py  ml_transformer.py  nist.py
scripts/estimate_8bits_stride/: README.md  lz.py  ml_lstm.py  ml_rnn.py  ml_transformer.py  nist.py
scripts/estimate_nbits_stride/: README.md  lz.py  ml_bitwise_rnn.py  ml_lstm.py  ml_rnn.py  ml_transformer.py
scripts/process/: bus_8bits.py  bus_nbits.py  ethereum_nbits.py  generate_8bits.py  generate_nbits.py  radio_8bits.py  radio_nbits.py  sismology_nbits.py
(+42 files in other folders)
