[project]
name = "entropy-estimation"
version = "0.1.0"
description = "Entropy Estimation"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "requests",
    "beautifulsoup4",
    "jupyter>=1.1.1",
    "antropy>=0.1.9",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]
